@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - treat ambiguous types as a normal error, rather than an exception
+            which may provide incorrect location data
 
 0.565     2023-03-12 21:19:27Z
           - traverse and evaluate callbacks can now produce errors,
